--- a/index.html
+++ b/index.html
@@ -19,9 +19,160 @@
       href="./css/desk-style.css"
       media="(min-width: 1025px)"
     />
-    <title>Landing page</title>
+    <title>LADA</title>
 </head>
 <body>
+  <header class="header">
+    <div class="container">
+      <div class="header__container">
+        <div class="header__logo">
+          <img src="./img/logo.svg" alt="logo" class="header__logo-img">
+        </div>
+        <div class="header__info-text">
+          <img src="./img/local-desk.svg" alt="call">
+          <span>33 км МКАД 6 стр 6</span>
+        </div>
+        <div class="burger">
+          <span class="burger__line line_1"></span>
+          <span class="burger__line line_2"></span>
+          <span class="burger__line line_3"></span>
+        </div>
+        <div class="header__menu">
+          <nav class="header__nav">
+            <a href="#model" class="header__nav-link active">Модельный ряд</a>
+            <a href="#equip" class="header__nav-link">Комплектации</a>
+            <a href="#autocredit" class="header__nav-link">Автокредит</a>
+            <a href="#trade-in" class="header__nav-link">Trade-In</a>
+            <a href="#contact" class="header__nav-link">Контакты</a>
+          </nav>
+          <div class="header__menu-info">
+            <ul class="header__menu-list">
+              <li class="header__menu-item desk_hide">
+                <img src="./img/clock.svg" alt="icon">
+                <span>Ежедневно с 8:00 до 21:00</span>
+              </li>
+              <li class="header__menu-item desk_hide">
+                <a class="header__menu-link" href="tel:+7 (495) 111 11-11">
+                  <img src="./img/phone-mob.svg" alt="icon">
+                  <span>+7 (495) 111 11-11</span>
+                </a>
+              </li>
+              <li class="header__menu-item desk_hide">
+                <img src="./img/local.svg" alt="icon">
+                <span>27 км МКАД (внешняя сторона)</span>
+              </li>
+            </ul>
+          </div>
+          <button class="btn header__menu-btn " data-fancybox data-src="#modalSpecial">
+            <span>Обратный звонок</span>
+          </button>
+        </div>
+        <a href="tel:+7 (495) 111 11-11" class="header__info-text">
+          <img src="./img/phone-desk.svg" alt="call">
+          <span>+7 (495) 111 11-11</span>
+        </a>
+      </div>
+    </div>
+  </header>
+  <section class="main-banner">
+    <div class="container">
+      <div class="main-banner__container">
+        <h1 class="main-banner__title">
+          Снижаем цены 
+          <span class="title_small">на весь модельный ряд Lada</span>
+        </h1>
+        <div class="main-banner__block">
+          <div class="main-banner__actions">
+            <span class="main-banner__actions-head">Скидки до 40%</span>
+            <span class="main-banner__actions-text">КАСКО или 3 ТО в подарок</span>
+            <button class="main-banner__btn btn bg_orange mob_hide">
+              <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26" fill="none">
+                <path d="M17.3333 2.16667V8.66667H23.8333" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                <path d="M24.9167 1.08333L17.3333 8.66667" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                <path d="M23.8333 18.33V21.58C23.8346 21.8817 23.7728 22.1804 23.6519 22.4568C23.531 22.7332 23.3537 22.9814 23.1314 23.1854C22.9091 23.3893 22.6466 23.5446 22.3608 23.6413C22.075 23.7379 21.7722 23.7738 21.4717 23.7467C18.1381 23.3844 14.9359 22.2453 12.1225 20.4208C9.50498 18.7576 7.28578 16.5384 5.6225 13.9208C3.79164 11.0946 2.65226 7.87691 2.29667 4.52833C2.26959 4.22876 2.3052 3.92682 2.40121 3.64176C2.49722 3.3567 2.65153 3.09475 2.85433 2.87259C3.05712 2.65043 3.30395 2.47293 3.57911 2.3514C3.85426 2.22986 4.1517 2.16695 4.4525 2.16667H7.7025C8.22825 2.16149 8.73794 2.34767 9.13657 2.69049C9.53521 3.03332 9.79558 3.5094 9.86917 4.03C10.0063 5.07007 10.2607 6.09129 10.6275 7.07417C10.7733 7.46192 10.8048 7.88332 10.7184 8.28845C10.632 8.69358 10.4313 9.06545 10.14 9.36L8.76417 10.7358C10.3064 13.448 12.552 15.6936 15.2642 17.2358L16.64 15.86C16.9345 15.5687 17.3064 15.368 17.7115 15.2816C18.1167 15.1952 18.5381 15.2267 18.9258 15.3725C19.9087 15.7393 20.9299 15.9937 21.97 16.1308C22.4962 16.2051 22.9769 16.4701 23.3204 16.8756C23.664 17.2811 23.8465 17.7987 23.8333 18.33Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
+              Получить предложение
+            </button>
+          </div>
+          <div class="main-banner__timer">
+            <span class="main-banner__text">
+              до повышения
+              цен осталось:
+            </span>
+            <div class="timer">
+              <div class="time-count__item time-count__days">
+                <div class="time-count__val">00</div>
+                <span class="time-count__text">дней</span>
+                <div class="count-round">
+                  <svg viewBox="0 0 64 64" class="pie">
+                      <circle class="background" r="50%" cx="50%" cy="50%"></circle>
+                      <circle class="chart chart-days" r="50%" cx="50%" cy="50%" stroke-dasharray="200 200"></circle>
+                  </svg>
+                </div>
+              </div>
+              <div class="time-count__item time-count__hours">
+                <div class="time-count__val">00</div>
+                <span class="time-count__text">часов</span>
+                <div class="count-round">
+                  <svg viewBox="0 0 64 64" class="pie">
+                      <circle class="background" r="50%" cx="50%" cy="50%"></circle>
+                      <circle class="chart chart-days" r="50%" cx="50%" cy="50%" stroke-dasharray="200 200"></circle>
+                  </svg>
+                </div>
+              </div>
+              <div class="time-count__item time-count__minutes">
+                <div class="time-count__val">00</div>
+                <span class="time-count__text">минут</span>
+                <div class="count-round">
+                  <svg viewBox="0 0 64 64" class="pie">
+                      <circle class="background" r="50%" cx="50%" cy="50%"></circle>
+                      <circle class="chart chart-days" r="50%" cx="50%" cy="50%" stroke-dasharray="200 200"></circle>
+                  </svg>
+                </div>
+              </div>
+              <div class="time-count__item time-count__seconds">
+                <div class="time-count__val">00</div>
+                <span class="time-count__text">секунд</span>
+                <div class="count-round">
+                  <svg viewBox="0 0 64 64" class="pie">
+                      <circle class="background" r="50%" cx="50%" cy="50%"></circle>
+                      <circle class="chart chart-days" r="50%" cx="50%" cy="50%" stroke-dasharray="200 200"></circle>
+                  </svg>
+                </div>
+              </div>
+            </div>
+            <button class="btn bg_orange main-banner__btn" data-fancybox data-src="#modalSuc2">Зафиксировать цену</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- <footer class="footer">
+    <div class="container">
+      <div class="footer__container">
+        <div class="footer__links">
+          <a href="" class="footer__text bold">Условия кредитования</a>
+          <a href="" class="footer__text bold">Пользовательское соглашение</a>
+          <a href="" class="footer__text bold">Политика конфиденциальности</a>
+        </div>
+        <p class="footer__text bold basis">
+          ОБЩЕСТВО С ОГРАНИЧЕННОЙ ОТВЕТСТВЕННОСТЬЮ "ФОРМАТ" ИНН 7725371767 КПП 775101001 ОГРН 1177746445381 Юридический адрес 108831, город Москва, г Щербинка, Бутовский туп, д. 3 стр. 1, помещ. 3 офис 1
+          Обращаем ваше внимание на то, что данный интернет-сайт носит исключительно информационный характер и ни при каких условиях не является публичной офертой, определяемой положением ч. 2 ст. 437 Гражданского кодекса Российской Федерации.
+        </p>
+        <div class="footer__info">
+          <p class="footer__text">
+            Обращаем ваше внимание на то, что данный интернет-сайт носит исключительно информационный характер и ни при каких условиях не является публичной офертой, определяемой положением ч. 2 ст. 437 Гражданского кодекса Российской Федерации.
+          </p>
+          <button class="footer__btn js_footer_info_toggle">Подробнее</button>
+        </div>
+      </div>
+      <div class="footer__info-toggle">
+        <p class="footer__text">
+          Обращаем ваше внимание на то, что данный Интернет-сайт носит исключительно информационный характер и ни при каких условиях не является публичной офертой, определяемой положениями Статьи 437 Гражданского кодекса Российской Федерации. Для получения подробной информации о стоимости автомобилей обращайтесь к менеджерам по продажам. Любая информация, содержащаяся на настоящем сайте, носит исключительно справочный характер и ни при каких обстоятельствах не может быть расценена как предложение заключить договор (публичная оферта). Дилер не дает гарантий по поводу своевременности, точности и полноты информации на веб-сайте, а также по поводу беспрепятственного доступа к нему в любое время. Технические характеристики и оборудование автомобилей, условия приобретения автомобилей, цены, спецпредложения и комплектации автомобилей, указанные на сайте, приведены для примера и могут быть изменены в любое время без предварительного уведомления. Для получения подробной информации об актуальных ценах на продукцию и наличии автомобилей обращайтесь в дилерский центр. Приобретение любой продукции бренда осуществляется в соответствии с условиями индивидуального договора купли-продажи. Представленное изображение автомобиля может отличаться от реализуемого. Не является публичной офертой. ПТС - Паспорт транспортного средства. На данном сайте используются зарегистрированные товарные знаки, перечисленные в разделе Правовая информация. Указана цена на автомобиль в начальной комплектации на автомобили 2022 модельного года. Для заказов с подтвержденной производственной к.н. 50/2021. Количество автомобилей ограничено. Размер платежа в день означает величину затрат заемщика, эквивалентную ежемесячному платежу при условии 30 (тридцати) календарных дней в месяце, взявшего кредит по программе кредитования ВТБ, Сетелем, Русфинанс Банк, Банк Союз, Экспобанк, Совкомбанк, Альфа Банк, Тинькофф, Плюсбанк, Банк Оранжевый, Росбанк, Ситибанк, (далее – «Банк») на покупку нового автомобиля с расчетной розничной ценой в начально комплектации, на срок 60 мес., с первоначальным взносом 57,92% от стоимости автомобиля, остаточным платежом (далее ОП) 20% от стоимости автомобиля и процентной ставкой 14,5%. Данная информация не является офертой Банка, расчет является приблизительным. Полная стоимость кредита и конкретные параметры кредита будут рассчитаны на основании Анкеты клиента, направляемой в Банк для одобрения кредитной заявки. Основные условия кредитования ВТБ, Сетелем, Русфинанс Банк, Банк Союз, Экспобанк, Совкомбанк, Альфа Банк, Тинькофф, Плюсбанк, Банк Оранжевый, Росбанк, Ситибанк, (далее Банк) на покупку нового автомобиля по продукту «Кредит с остаточным платежом на приобретение нового автомобиля» валюта кредита – рубли РФ; сумма кредита от 120 тыс. до 5.8 млн. ₽ Процентная ставка (в % годовых) при сроке от 12 до 60 мес. – 14,5% при первоначальном взносе (далее ПВ) от 15% (включительно). При ПВ менее 20% необходимо предоставление полного пакета документов. Минимальный размер остаточного платежа (далее ОП) в % от стоимости автомобиля – 20%; максимальный размер ОП при сроке при сроке кредита 12 мес. – 60%, при сроках от 13 до 24 мес. – 50%, при сроках от 25 до 36 мес. – 45%, при сроках от 37 до 48 мес. – 30%, при сроках от 49 до 60 мес. – 20%. Обеспечение по кредиту – залог приобретаемого автомобиля. Условия кредита действительны до 01.06.2022 и могут быть изменены Банком. Лицензия ЦБ РФ № 3500, г. Москва.
+        </p>
+      </div>
+    </div>
+  </footer> -->
     <script src="./libs/jquery.min.js"></script>
     <script src="./libs/masked-input.min.js"></script>
     <script src="./libs/fancybox.min.js"></script>
