--- a/index.html
+++ b/index.html
@@ -22,6 +22,69 @@
     <title>Landing page</title>
 </head>
 <body>
+  <header class="header">
+    <div class="header-top">
+      <div class="container">
+        <div class="header-top__container">
+          <div class="header-top__item">
+            <img src="./img/local.svg" alt="icon">
+            <span>27 км МКАД 6 стр 6</span>
+          </div>
+          <a href="tel:" class="header-top__item">
+            <img src="./img/phone.svg" alt="icon">
+            <span>+7 (495) 111 11-11</span>
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="header-bottom">
+      <div class="container">
+        <div class="header__container">
+          <div class="header__logo">
+            <img src="./img/logo.svg" alt="logo">
+          </div>
+          <div class="burger">
+            <div class="burger__flex _flex1">
+              <span>
+                <span class="burger__ball _ball1"></span>
+              </span>
+              <span>
+                <span class="burger__line _line1"></span>
+              </span>
+            </div>
+            <div class="burger__flex _flex2">
+              <span>
+                <span class="burger__ball _ball2"></span>
+              </span>
+              <span>
+                <span class="burger__line _line2"></span>
+              </span>
+            </div>
+            <div class="burger__flex _flex3">
+              <span>
+                <span class="burger__ball _ball3"></span>
+              </span>
+              <span>
+                <span class="burger__line _line3"></span>
+              </span>
+            </div>
+          </div>
+          <div class="header__menu">
+            <nav class="header__nav">
+              <a href="#model" class="header__nav-link">Модельный ряд</a>
+              <a href="#equip" class="header__nav-link">Комплектации</a>
+              <a href="#autocredit" class="header__nav-link">Автокредит</a>
+              <a href="#trade-in" class="header__nav-link">TRADE-IN</a>
+              <a href="#contact" class="header__nav-link">Контакты</a>
+            </nav>
+            <div class="header__btn">
+              <button class="btn header__button">Обратный звонок</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </header>
     <script src="./libs/jquery.min.js"></script>
     <script src="./libs/masked-input.min.js"></script>
     <script src="./libs/fancybox.min.js"></script>
